--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -44,3 +44,158 @@
   year={1968},
   publisher={Harcourt, Brace, Javanovich}
 }
+
+@article{thurstone1927law,
+  title={A law of comparative judgment.},
+  author={Thurstone, Louis L},
+  journal={Psychological review},
+  volume={34},
+  number={4},
+  pages={273},
+  year={1927},
+  publisher={Psychological Review Company}
+}
+
+@article{andrich1978relationships,
+  title={Relationships between the Thurstone and Rasch approaches to item scaling},
+  author={Andrich, David},
+  journal={Applied Psychological Measurement},
+  volume={2},
+  number={3},
+  pages={451--462},
+  year={1978},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{pollitt1996raters,
+  title={What raters really pay attention to},
+  author={Pollitt, Alastair and Murray, Neil L},
+  journal={Studies in language testing},
+  volume={3},
+  pages={74--91},
+  year={1996}
+}
+
+@article{pollitt2012method,
+  title={The method of adaptive comparative judgement},
+  author={Pollitt, Alastair},
+  journal={Assessment in Education: principles, policy \& practice},
+  volume={19},
+  number={3},
+  pages={281--300},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@article{bartholomew2019using,
+  title={Using adaptive comparative judgment for student formative feedback and learning during a middle school design project},
+  author={Bartholomew, Scott R and Strimel, Greg J and Yoshikawa, Emily},
+  journal={International Journal of Technology and Design Education},
+  volume={29},
+  pages={363--385},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{pollitt2012comparative,
+  title={Comparative judgement for assessment},
+  author={Pollitt, Alastair},
+  journal={International Journal of Technology and Design Education},
+  volume={22},
+  number={2},
+  pages={157--170},
+  year={2012},
+  publisher={Springer}
+}
+
+@inproceedings{inproceedings,
+author = {Seery, Niall and Delahunty, Thomas and Canty, Donal and Buckley, Jeffrey},
+year = {2017},
+month = {07},
+pages = {},
+title = {Illustrating educational development through ipsative performance in design based education}
+}
+
+@article{doi:10.1080/0969594X.2013.868341,
+author = {C. Paul Newhouse},
+title = {Using digital representations of practical production work for summative assessment},
+journal = {Assessment in Education: Principles, Policy \& Practice},
+volume = {21},
+number = {2},
+pages = {205-220},
+year  = {2014},
+publisher = {Routledge},
+doi = {10.1080/0969594X.2013.868341},
+
+URL = { 
+        https://doi.org/10.1080/0969594X.2013.868341
+},
+eprint = { 
+        https://doi.org/10.1080/0969594X.2013.868341
+}
+}
+
+@misc{nbarr,
+  author = {Niall S F Barr},
+  title = {ACJ demo},
+  howpublished = {\url{http://home.niallbarr.me.uk/acjdemo/}},
+  note = {Accessed: 15 April 2023}
+}
+
+@misc{nbarr:code,
+  author = {Niall S F Barr},
+  title = {An adaptive comparative juddgement assessment tool with LTI},
+  howpublished = {\url{https://github.com/niallb/ACJ-LTI}},
+  note = {Accessed: 15 April 2023}
+}
+
+@misc{nbarr:pseudocode,
+  author = {Niall S F Barr},
+  title = {Description of my ACJ algorithm},
+  howpublished = {personal communication},
+  month = {April},
+  year = {2023}
+}
+
+@misc{openid,
+  author       = {Microsoft},
+  title        = {OpenID Connect on the Microsoft identity platform},
+  howpublished = {\url{https://learn.microsoft.com/en-us/azure/active-directory/develop/v2-protocols-oidc}},
+  month        = {February},
+  year         = {2023},
+  note         = {Accessed: 15 April 2023}
+}
+
+@misc{rmcompare,
+  author       = {RM Compare},
+  title        = {RM Compare website},
+  howpublished = {\url{https://compare.rm.com/}},
+  note         = {Accessed: 15 April 2023}
+}
+
+@misc{moscow,
+  author = {Agile Business Consortium},
+  title = {Chapter 10: MoSCoW Prioritisation},
+  howpublished = {\url{https://www.agilebusiness.org/dsdm-project-framework/moscow-prioririsation.html}},
+  note = {Accessed: 16 April 2023}
+}
+
+https://www.sqlite.org/whentouse.html
+
+@misc{sqlite,
+  author = {SQLite},
+  title = {Appropriate Uses For SQLite},
+  howpublished = {\url{https://www.sqlite.org/whentouse.html}},
+  month = {December},
+  year = {2022},
+  note = {Accessed: 16 April 2023}
+}
+
+@misc{openid:node,
+  author       = {Microsoft},
+  title        = {Tutorial: Sign in users and acquire a token for Microsoft Graph in a Node.js & Express web app},
+  howpublished = {\url{https://learn.microsoft.com/en-us/azure/active-directory/develop/tutorial-v2-nodejs-webapp-msal}},
+  month        = {October},
+  year         = {2022},
+  note         = {Accessed: 16 April 2023}
+}
